<?xml version="1.0" encoding="utf-8"?>
<!-- 2015-08-01 K.OHWADA -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
    	android:padding="4dp" >

<!-- id -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp" 
                android:layout_height="wrap_content"
                android:text="@string/item_id" />
       
            <TextView
                android:id="@+id/TextView_rec_id"
                android:layout_width="0dp" 
                android:layout_height="wrap_content" 
                android:layout_weight="1" />
    		
        </LinearLayout>

<!-- time -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp" 
                android:layout_height="wrap_content"
                android:text="@string/item_time" />
       
            <TextView
                android:id="@+id/TextView_rec_time"
                android:layout_width="0dp" 
                android:layout_height="wrap_content" 
                android:layout_weight="1" />
    		
        </LinearLayout>
    
<!-- title  -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp" 
                android:layout_height="wrap_content"
                android:text="@string/item_title" />
       
            <EditText
                android:id="@+id/EditText_rec_title"
                android:layout_width="0dp" 
                android:layout_height="wrap_content" 
                android:layout_weight="1"
                android:inputType="text" />
    		
        </LinearLayout> 

<!-- msg  -->
        <TextView
            android:layout_width="100dp" 
            android:layout_height="wrap_content"
            android:text="@string/item_msg" />
       
        <EditText
            android:id="@+id/EditText_rec_msg"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:lines="5"
            android:inputType="textMultiLine" />

<!-- button -->			
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
    
            <Button
                android:id="@+id/Button_rec_create"
                android:text="@string/button_create"
                android:layout_width="0dp" 
                android:layout_height="wrap_content" 
                android:layout_weight="1"
                android:onClick="onClickRecCreate" />

            <Button
                android:id="@+id/Button_rec_update"
                android:text="@string/button_update"
                android:layout_width="0dp" 
                android:layout_height="wrap_content" 
                android:layout_weight="1"
                android:onClick="onClickRecUpdate" />

            <Button
                android:id="@+id/Button_rec_delete"
                android:text="@string/button_delete"
                android:layout_width="0dp" 
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickRecDelete" />

        </LinearLayout>

        <Button
            android:id="@+id/Button_rec_back"
            android:text="@string/button_back"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:onClick="onClickRecBack" />
        
    </LinearLayout>
</LinearLayout>
