<?xml version="1.0" encoding="utf-8"?>
<!-- 2015-08-01 K.OHWADA -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp" >

    <RadioGroup
        android:id="@+id/RadioGroup_language" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
        <RadioButton 
            android:id="@+id/RadioButton_language_english"
            android:text="@string/radio_language_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton 
            android:id="@+id/RadioButton_language_japanese"
            android:text="@string/radio_language_japanese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <Button
        android:id="@+id/Button_language_back"
        android:text="@string/button_back"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" />

</LinearLayout>
